[workspace]

resolver = "2"
members = [
    "src/libsimlin",
    "src/simlin-cli",
    "src/simlin-engine",
    "src/simlin-mcp",
    "src/simlin-mcp-core",
    "src/simlin-serve",
    "src/xmutil",
]

# Native release builds optimize for speed (opt-level = 3). The WASM bundle,
# where download size dominates, is forced back to opt-level = "z" via
# `.cargo/config.toml` ([target.wasm32-unknown-unknown] rustflags), which is
# keyed on the target rather than the build invocation so every wasm build path
# stays size-optimized. Measured on C-LEARN: opt-level 3 vs "z" is ~-30% compile
# and ~-41% simulate on native (see docs/design/engine-performance.md).
[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true

[profile.bench]
debug = true
strip = false
