[package]
name = "engine-core"
version = "0.1.0"
authors = ["Bobby Powers <bobbypowers@gmail.com>"]
license = "Apache-2.0"
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["rlib"]

[dependencies]
lazy_static = "1"
libc = "0.2"
regex = "1"
unicode-xid = "0.2"
lalrpop-util = "0.18"
serde = { version = "1", features = [ "derive" ] }
quick-xml = { version = "0.17", features = [ "serialize" ] }
prost = "0.6"
prost-types = "0.6"

[build-dependencies]
lalrpop = "0.18"
prost-build = "0.6"
