[package]
name = "engine-core"
version = "0.1.0"
authors = ["Bobby Powers <bobbypowers@gmail.com>"]
license = "Apache-2.0"
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["rlib"]

[dependencies]
bincode = "1"
lazy_static = "1"
libc = "0.2"
regex = "1"
unicode-xid = "0.2"
lalrpop-util = "0.19"
serde = { version = "1", features = [ "derive" ] }
quick-xml = { version = "0.18", features = [ "serialize" ] }
prost = { version = "0.6", git = "https://github.com/danburkert/prost", rev = "ca6de9fab99fb192fd8e1e684fc3aff980e0e911"}
prost-types = { version = "0.6", git = "https://github.com/danburkert/prost", rev = "ca6de9fab99fb192fd8e1e684fc3aff980e0e911"}
float-cmp = "0.8"

[dev-dependencies]
rand = "0.7"
csv = "1"

[build-dependencies]
bincode = "1"
lalrpop = "0.19"
prost-build = { version = "0.6", git = "https://github.com/danburkert/prost", rev = "ca6de9fab99fb192fd8e1e684fc3aff980e0e911"}
quick-xml = { version = "0.18", features = [ "serialize" ] }
serde = { version = "1", features = [ "derive" ] }
