[package]
name = "engine-core"
version = "0.1.0"
authors = ["Bobby Powers <bobbypowers@gmail.com>"]
license = "Apache-2.0"
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["rlib"]

[dependencies]
bincode = "1"
lazy_static = "1"
libc = "0.2"
regex = "1"
unicode-xid = "0.2"
lalrpop-util = "0.19"
serde = { version = "1", features = [ "derive" ] }
quick-xml = { version = "0.20", features = [ "serialize" ] }
prost = { version = "0.6", git = "https://github.com/danburkert/prost", rev = "b664fef20ebb0dd9edbdfb69462c05f1a2005a55"}
prost-types = { version = "0.6", git = "https://github.com/danburkert/prost", rev = "b664fef20ebb0dd9edbdfb69462c05f1a2005a55"}
float-cmp = "0.8"

[dev-dependencies]
rand = "0.7"
csv = "1"

[build-dependencies]
lazy_static = "1"
regex = "1"
bincode = "1"
lalrpop = "0.19"
prost-build = { version = "0.6", git = "https://github.com/danburkert/prost", rev = "b664fef20ebb0dd9edbdfb69462c05f1a2005a55"}
quick-xml = { version = "0.20", features = [ "serialize" ] }
serde = { version = "1", features = [ "derive" ] }
