[package]
name = "engine-v2"
version = "0.1.0"
authors = ["Bobby Powers <bobbypowers@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
system-dynamics-compat = { version = "0.1", path = "../system-dynamics-compat" }
system-dynamics-engine = { version = "0.1", path = "../system-dynamics-engine" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
