[package]
name = "engine"
version = "0.1.0"
description = "JavaScript interface to the System Dynamics engine"
repository = "https://github.com/bpowers/simlin"
authors = ["Bobby Powers <bobbypowers@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
system-dynamics-engine = { version = "0.1", path = "../system-dynamics-engine", features = ["wasm"] }
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
