[package]
name = "engine"
version = "0.1.0"
description = "JavaScript interface to the System Dynamics engine"
repository = "https://github.com/bpowers/simlin"
authors = ["Bobby Powers <bobbypowers@gmail.com>"]
license = "Apache-2.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
simlin-engine = { version = "0.1", path = "../simlin-engine", default-features = false, features = ["wasm"] }
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
