[package]
name = "importer"
version = "0.1.0"
description = "JavaScript interface to convert Vensim and Stella models to protobuf"
repository = "https://github.com/bpowers/model-app"
authors = ["Bobby Powers <bobbypowers@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
system-dynamics-compat = { version = "0.1", path = "../system-dynamics-compat" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
