[package]
name = "simlin"
version = "0.1.0"
description = "C-compatible FFI interface to the System Dynamics engine"
repository = "https://github.com/bpowers/simlin"
authors = ["Bobby Powers <bobbypowers@gmail.com>"]
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[features]
default = []

[dependencies]
simlin-engine = { version = "0.1", path = "../simlin-engine", default-features = false }
simlin-compat = { version = "0.1", path = "../simlin-compat", default-features = false }
prost = "0.14"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
