[package]
name = "simlin"
version = "0.1.0"
description = "C-compatible FFI interface to the System Dynamics engine"
repository = "https://github.com/bpowers/simlin"
authors = ["Bobby Powers <bobbypowers@gmail.com>"]
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[features]
default = []
debug-derive = ["simlin-engine/debug-derive"]
file_io = ["simlin-engine/file_io"]
ext_data = ["simlin-engine/ext_data"]
# Use mimalloc as the global allocator. Off by default; enabled by native
# consumers of the cdylib/staticlib (pysimlin via cffi, C/C++ FFI) where the
# allocation-heavy engine compile path benefits. Never enabled for the wasm32
# bundle (the wasm build uses --no-default-features), and the global_allocator
# is additionally cfg'd off for wasm32 in lib.rs as belt-and-suspenders.
mimalloc = ["dep:mimalloc"]

[dependencies]
simlin-engine = { version = "0.1", path = "../simlin-engine", default-features = false, features = ["png_render"] }
prost = "0.14"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
mimalloc = { version = "0.1", optional = true }

[dev-dependencies]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
