[package]
name = "simlin-cli"
version = "0.1.0"
authors = ["Bobby Powers <bobbypowers@gmail.com>"]
license = "Apache-2.0"
edition = "2024"

[[bin]]
name = "simlin"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
stringreader = "0.1"
sha2 = "0.10"
simlin-engine = { version = "0.1", path = "../simlin-engine", features = ["file_io"] }
# `mimalloc` installs mimalloc as the process global allocator (this binary runs
# the allocation-heavy engine compile path). Routed through libsimlin rather than
# a direct dep + local `#[global_allocator]` so there is exactly one global
# allocator in this artifact even under `cargo clippy --all-features`.
simlin = { version = "0.1", path = "../libsimlin", features = ["mimalloc"] }
