[package]
name = "simlin-engine"
version = "0.1.0"
authors = ["Bobby Powers <bobbypowers@gmail.com>"]
license = "Apache-2.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[features]
default = ["schema", "ai_info", "debug-derive"]
# Gates derive(Debug) on most types. Types that implement std::error::Error,
# are used with .unwrap(), or appear in assert_eq!() keep unconditional Debug.
# New types should use: #[cfg_attr(feature = "debug-derive", derive(Debug))]
debug-derive = []
schema = ["dep:schemars"]
ai_info = ["dep:ed25519", "dep:base64"]
file_io = ["dep:csv"]
ext_data = ["dep:calamine"]
png_render = ["dep:resvg"]
xmutil = ["dep:xmutil"]

[dependencies]
lazy_static = "1"
unicode-xid = "0.2"
prost = "0.14"
float-cmp = "0.10"
ordered-float = "5"
smallvec = { version = "1", features = [ "union" ] }
ed25519 = { version = "2", optional = true }
base64 = { version = "0.22", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1", features = ["preserve_order"], optional = true }
# compat dependencies
quick-xml = { version = "0.38", features = [ "serialize", "overlapped-lists" ] }
csv = { version = "1", optional = true }
calamine = { version = "0.33", optional = true }
resvg = { version = "0.47", optional = true }
xmutil = { version = "1", path = "../xmutil", optional = true }

bumpalo = "3"
salsa = "0.26"

# WebAssembly code-generation backend (compiles models to wasm as an
# alternative to the bytecode VM). no_std + alloc only, single transitive
# dependency (leb128fmt), and builds cleanly to wasm32-unknown-unknown so it
# is available inside the libsimlin wasm bundle.
wasm-encoder = { version = "0.244", default-features = false }

rand = { version = "0.9", default-features = false, features = ["std_rng"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1"

[dev-dependencies]
csv = "1"
rand = "0.9"
proptest = "1.5"
jsonschema = { version = "0.26", default-features = false }
criterion = { version = "0.5", features = ["html_reports"] }
sha2 = "0.10"
test-generator = { version = "0.3.0", git = "https://github.com/bpowers/test-generator", rev = "b78145bfb6a6f81425dfd6fbacb9c03624e79b2c" }
ed25519-dalek = "2"
ssh-key = "0.6"
tempfile = "3"

# Pure-Rust no_std wasm interpreter used as a correctness oracle: every wasm
# module the wasmgen backend produces is executed here and checked against the
# bytecode VM. Git-only (not yet published to crates.io); pinned to a commit.
# The host `Store` API lives in the `checked` workspace member, not the `wasm`
# lib crate.
wasm-interpreter = { git = "https://github.com/DLR-FT/wasm-interpreter.git", rev = "64cedbba603edfd64cbb6b5a19f5fa34530bb03a" }
checked = { git = "https://github.com/DLR-FT/wasm-interpreter.git", rev = "64cedbba603edfd64cbb6b5a19f5fa34530bb03a", features = ["linker", "interop"] }

[[test]]
name = "simulate"
required-features = ["file_io"]

[[test]]
name = "simulate_ltm"
required-features = ["file_io"]

[[test]]
name = "simulate_systems"
required-features = ["file_io"]

[[test]]
name = "systems_roundtrip"
required-features = ["file_io"]

# metasd_macros calls load_dat/load_csv in its simulation tier, which are
# #[cfg(feature = "file_io")]-gated; without this entry Cargo auto-discovers
# the target unconditionally and `--all-targets` fails to compile when
# file_io is off (every sibling file_io test below/above is gated the same
# way).
[[test]]
name = "metasd_macros"
required-features = ["file_io"]

[[test]]
name = "roundtrip"

[[test]]
name = "mdl_equivalence"

[[test]]
name = "json_roundtrip"

[[test]]
name = "compiler_vector"

[[test]]
name = "vdf_alias_decoder"
required-features = ["file_io"]

[[bench]]
name = "array_ops"
harness = false

[[bench]]
name = "simulation"
harness = false

[[bench]]
name = "compiler"
harness = false

[[bench]]
name = "rapidhash_bench"
harness = false

[build-dependencies]
