[package]
name = "simlin-engine"
version = "0.1.0"
authors = ["Bobby Powers <bobbypowers@gmail.com>"]
license = "Apache-2.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[features]
default = ["schema", "ai_info", "debug-derive"]
# Gates derive(Debug) on most types. Types that implement std::error::Error,
# are used with .unwrap(), or appear in assert_eq!() keep unconditional Debug.
# New types should use: #[cfg_attr(feature = "debug-derive", derive(Debug))]
debug-derive = []
schema = ["dep:schemars"]
ai_info = ["dep:ed25519", "dep:base64"]
file_io = ["dep:csv"]
ext_data = ["dep:calamine"]
png_render = ["dep:resvg"]
xmutil = ["dep:xmutil"]
# Compiles in the `generate_loop_score_variables` loop-score tracing
# instrumentation (per-loop cumulative equation bytes + RSS sampling), a
# benchmarking/diagnostic aid only. Off by default so production builds carry
# no /proc/self/status read, env lookup, or eprintln! dead code. Enable with
# `--features ltm_bench` when running the `ltm_full_bench` example.
ltm_bench = []

[dependencies]
unicode-xid = "0.2"
prost = "0.14"
smallvec = { version = "1", features = [ "union" ] }
# Fast, deterministic (fixed-seed) hasher for hot internal maps in the
# dependency-graph cycle gate. Wasm-safe (no getrandom). FxHash's fixed seed
# keeps map iteration deterministic where it is intentionally not order-leaking.
rustc-hash = "2"
ed25519 = { version = "2", optional = true }
base64 = { version = "0.22", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1", features = ["preserve_order"], optional = true }
# compat dependencies
quick-xml = { version = "0.38", features = [ "serialize", "overlapped-lists" ] }
csv = { version = "1", optional = true }
calamine = { version = "0.33", optional = true }
resvg = { version = "0.47", optional = true, default-features = false, features = ["text"] }
xmutil = { version = "1", path = "../xmutil", optional = true }

bumpalo = "3"
salsa = "0.26"
# Insertion-order-preserving map. Used for `LtmVariablesResult.loop_partitions`
# so the post-sim rel-loop-score denominator sums in the loops' emission order
# (bit-for-bit parity with the pre-#461 compile-time emitter; GH #468). Already
# in the dependency tree via salsa, which also provides its `salsa::Update` impl.
indexmap = "2"

# WebAssembly code-generation backend (compiles models to wasm as an
# alternative to the bytecode VM). no_std + alloc only, single transitive
# dependency (leb128fmt), and builds cleanly to wasm32-unknown-unknown so it
# is available inside the libsimlin wasm bundle.
wasm-encoder = { version = "0.244", default-features = false }

rand = { version = "0.9", default-features = false, features = ["std_rng"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1"

[dev-dependencies]
csv = "1"
rand = "0.9"
proptest = "1.5"
jsonschema = { version = "0.26", default-features = false }
# default features pull in the plotters HTML-report stack (plotters,
# criterion-plot, tinytemplate, cast, oorandom, ...); we only ever read the
# terminal summary, so trim to the bench-runner harness alone.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
sha2 = "0.10"
test-generator = { version = "0.3.0", git = "https://github.com/bpowers/test-generator", rev = "b78145bfb6a6f81425dfd6fbacb9c03624e79b2c" }
ed25519-dalek = "2"
tempfile = "3"

# Pure-Rust no_std wasm interpreter used as a correctness oracle: every wasm
# module the wasmgen backend produces is executed here and checked against the
# bytecode VM. Git-only (not yet published to crates.io); pinned to a commit.
# The host `Store` API lives in the `checked` workspace member, not the `wasm`
# lib crate.
wasm-interpreter = { git = "https://github.com/DLR-FT/wasm-interpreter.git", rev = "64cedbba603edfd64cbb6b5a19f5fa34530bb03a" }
checked = { git = "https://github.com/DLR-FT/wasm-interpreter.git", rev = "64cedbba603edfd64cbb6b5a19f5fa34530bb03a", features = ["linker", "interop"] }

# Integration tests are consolidated into the single tests/integration
# harness (see tests/integration/main.rs for why); feature-gated test
# modules use #[cfg(feature = ...)] there instead of per-target
# required-features entries. tests/vm_alloc.rs stays a separate
# auto-discovered target because it installs a counting global allocator.

# The layout_eval example calls the png_render-gated `render_png` and loads
# Vensim corpus models that reference external data (file_io). Examples are
# auto-discovered and built by `--all-targets` / clippy / pre-commit under the
# DEFAULT feature set (which excludes png_render); without this `[[example]]`
# entry pinning required-features, that build would fail to compile the example.
[[example]]
name = "layout_eval"
required-features = ["png_render", "file_io"]

[[bench]]
name = "array_ops"
harness = false

[[bench]]
name = "simulation"
harness = false

[[bench]]
name = "compiler"
harness = false

[[bench]]
name = "rapidhash_bench"
harness = false

[build-dependencies]
