[package]
name = "simlin-mcp"
version = "0.1.4"
authors = ["Bobby Powers <bobbypowers@gmail.com>"]
license = "Apache-2.0"
edition = "2024"
description = "MCP server exposing the Simlin simulation engine"

[lib]
name = "simlin_mcp"
path = "src/lib.rs"

[[bin]]
name = "simlin-mcp"
path = "src/main.rs"

[dependencies]
simlin-engine = { version = "0.1", path = "../simlin-engine", features = ["schema"] }
simlin-mcp-core = { version = "0.1", path = "../simlin-mcp-core" }
rmcp = { version = "1", features = ["server", "macros", "transport-io"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }

[dev-dependencies]
tempfile = "3"
serde_yaml = "0.9"
