[package]
name = "system-dynamics-compat"
version = "0.1.0"
authors = ["Bobby Powers <bobbypowers@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
quick-xml = { version = "0.20", features = [ "serialize" ] }
prost = { version = "0.6", git = "https://github.com/danburkert/prost", rev = "b664fef20ebb0dd9edbdfb69462c05f1a2005a55"}
serde = { version = "1", features = [ "derive" ] }
system-dynamics-engine = { version = "0.1", path = "../system-dynamics-engine" }
xmutil = "1.1"

[dev-dependencies]
float-cmp = "0.8"
csv = "1"