[package]
name = "system-dynamics-compat"
version = "0.1.0"
authors = ["Bobby Powers <bobbypowers@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
quick-xml = { version = "0.20", features = [ "serialize" ] }
serde = { version = "1", features = [ "derive" ] }
stringreader = "0.1"
system-dynamics-engine = { version = "0.1", path = "../system-dynamics-engine" }
xmutil = { version = "1", path = "../xmutil" }

[dev-dependencies]
float-cmp = "0.8"
csv = "1"
