[package]
name = "system-dynamics-engine"
version = "0.1.0"
authors = ["Bobby Powers <bobbypowers@gmail.com>"]
license = "Apache-2.0"
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["rlib"]

[features]
wasm = ["wasm-bindgen"]

[dependencies]
lazy_static = "1"
regex = "1"
unicode-xid = "0.2"
lalrpop-util = "0.19"
prost = { version = "0.6", git = "https://github.com/danburkert/prost", rev = "b664fef20ebb0dd9edbdfb69462c05f1a2005a55"}
float-cmp = "0.8"
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
rand = "0.7"

[build-dependencies]
lalrpop = "0.19"
prost-build = { version = "0.6", git = "https://github.com/danburkert/prost", rev = "b664fef20ebb0dd9edbdfb69462c05f1a2005a55"}
