[package]
name = "system-dynamics-engine"
version = "0.1.0"
authors = ["Bobby Powers <bobbypowers@gmail.com>"]
license = "Apache-2.0"
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["rlib"]

[features]
wasm = ["wasm-bindgen"]

[dependencies]
lazy_static = "1"
regex = "1"
unicode-xid = "0.2"
lalrpop-util = "0.19"
prost = "0.7"
float-cmp = "0.8"
ordered-float = "2"
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
rand = "0.8"

[build-dependencies]
lalrpop = "0.19"
prost-build = "0.7"
